<resources>
    <string name="app_name">EZ Pay</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="MobilePay">Mobile Pay</string>
    <string name="Pay">Pay</string>
    <string name="Ask">Ask</string>
    <string name="Settings">Settings</string>
    <string name="TypePrice">Type the price:</string>
    <string name="Validate">Valider</string>
    <string name="ErrorQRGen">Error while generating QR Code.</string>
    <string name="AskAuthorizations">Some functionalities of the application requires to write to System Settings. Authorize?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Authorization">Authorization</string>
    <string name="AuthorizationsRemember">Please remember to check authorizations.</string>
    <string name="ScanToPay">Please scan the QR Code to pay</string>
    <string name="ScanOrActivateToPay">Please scan the QR Code or Activate NFC to pay</string>
    <string name="ScanOrApproachToPay">Please scan the QR Code or place your phone on the Tag to pay</string>
    <string name="AuthorizePayment">Do you want to authorize the payment?</string>
    <string name="recharger_le_compte">Provision account</string>
    <string name="loading">Loading...</string>
    <string name="Login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_token">You are not logged in.</string>
    <string name="userID" translatable="false"></string>
     <string name="backend_ip" translatable="false">http://93.30.105.184</string>
<!--    <string name="backend_ip" translatable="false">http://192.168.1.30</string>-->

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="displaySoldDiagram">Display Balance Diagram</string>
    <string name="displayBalanceMainScreen">Display balance on main screen</string>
    <string name="useBiometry">Use biometry to confirm payment</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="bioAuth">Biometric authentication</string>
    <string name="bioAuthDescription">To confirm payment, please verify your identity.</string>
    <string name="stringAuthorizePayment">Do you want to authorize payment?</string>
    <string name="Store">Store</string>
    <string name="price">Price</string>
    <string name="provisionMessage">Please select the amount you want to credit</string>
    <string name="username" translatable="false">username</string>
    <string name="pwd" translatable="false">pwd</string>
    <string name="autologin" translatable="false">autologin</string>
    <string name="enableAutoLogin">Auto login</string>
    <string name="Reconnection">Reconnection</string>
    <string name="toReconnect">To be reconnected, please verify your identity</string>
    <string name="history">History</string>
    <string name="errands">Errands</string>
    <string name="shopping">Shopping</string>
    <string name="restaurant">Restaurant</string>
    <string name="transports">Transports</string>
    <string name="travel">Travel</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="services">Services</string>
    <string name="transferts">Transferts</string>
    <string name="insurance">Insurance</string>
    <string name="restartToSee">Please restart the app for the changes to take effect.</string>
    <string name="refreshAmount">Refresh balance</string>
    <string name="creditedAccount">You added</string>
</resources>
